{
  "version": 4,
  "terraform_version": "1.7.5",
  "serial": 111,
  "lineage": "033fced8-fb35-e6b7-2c65-11cdaa6fa16a",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip-heron",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09ee0d831bcb7ae1a",
            "association_id": "eipassoc-0ebe69225e720ff3a",
            "domain": "vpc",
            "id": "eipalloc-09ee0d831bcb7ae1a",
            "instance": "i-0f7c3f20fc576b7c9",
            "network_border_group": "us-east-1",
            "network_interface": "eni-07036eb57d31360ab",
            "private_dns": "ip-16-0-52-182.ec2.internal",
            "private_ip": "16.0.52.182",
            "public_dns": "ec2-44-206-12-2.compute-1.amazonaws.com",
            "public_ip": "44.206.12.2",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_instance.micro-heron",
            "aws_security_group.secgroup-heron",
            "aws_subnet.subnet-heron",
            "aws_vpc.network-heron"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "micro-heron",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-080e1f13689e07408",
            "arn": "arn:aws:ec2:us-east-1:247404654261:instance/i-0f7c3f20fc576b7c9",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f7c3f20fc576b7c9",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "heron-key-pair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-07036eb57d31360ab",
            "private_dns": "ip-16-0-52-182.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "16.0.52.182",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-046389e96a20f588f",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-02d983bee1d1049e7"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-050ae2b1308af6304",
            "tags": {
              "name": "micro-heron"
            },
            "tags_all": {
              "name": "micro-heron"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-02d983bee1d1049e7"
            ]
          },
          "dependencies": [
            "aws_security_group.secgroup-heron",
            "aws_subnet.subnet-heron",
            "aws_vpc.network-heron"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gateway-heron",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:247404654261:internet-gateway/igw-058c6b9b84fa57421",
            "id": "igw-058c6b9b84fa57421",
            "owner_id": "247404654261",
            "tags": {
              "name": "gateway-heron"
            },
            "tags_all": {
              "name": "gateway-heron"
            },
            "vpc_id": "vpc-0d50fbf645d8388ce"
          },
          "dependencies": [
            "aws_vpc.network-heron"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_table-heron",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:247404654261:route-table/rtb-07cb0db7a9efaf2ac",
            "id": "rtb-07cb0db7a9efaf2ac",
            "owner_id": "247404654261",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-058c6b9b84fa57421",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0d50fbf645d8388ce"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gateway-heron",
            "aws_vpc.network-heron"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "association-heron",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-001e2f768eb85065f",
            "route_table_id": "rtb-07cb0db7a9efaf2ac",
            "subnet_id": "subnet-050ae2b1308af6304"
          },
          "dependencies": [
            "aws_internet_gateway.gateway-heron",
            "aws_route_table.route_table-heron",
            "aws_subnet.subnet-heron",
            "aws_vpc.network-heron"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "secgroup-heron",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:247404654261:security-group/sg-02d983bee1d1049e7",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02d983bee1d1049e7",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "secgroup-heron-allow-all",
            "name_prefix": "",
            "owner_id": "247404654261",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0d50fbf645d8388ce"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.network-heron"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet-heron",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:247404654261:subnet/subnet-050ae2b1308af6304",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "16.0.32.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-050ae2b1308af6304",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "247404654261",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0d50fbf645d8388ce"
          },
          "dependencies": [
            "aws_vpc.network-heron"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "network-heron",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:247404654261:vpc/vpc-0d50fbf645d8388ce",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "16.0.0.0/16",
            "default_network_acl_id": "acl-065e8558ce6f931f0",
            "default_route_table_id": "rtb-042c7a65a815f6117",
            "default_security_group_id": "sg-0560abf6c3d5b913b",
            "dhcp_options_id": "dopt-0689f5a1e3ab78f1a",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0d50fbf645d8388ce",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-042c7a65a815f6117",
            "owner_id": "247404654261",
            "tags": {
              "name": "network-heron"
            },
            "tags_all": {
              "name": "network-heron"
            }
          }
        }
      ]
    }
  ]
}